# neko_oidc

./: Cargo.toml
scripts/: add_oidc_client.py  add_oidc_clsample.bash  add_oidc_clsample.ps1
sql/ddl/: oidc_auth_codes.ddl  oidc_client.ddl
src/: lib.rs  main.rs
src/auth/: codes.rs  mod.rs
src/client/: client.rs
tests/: auth_codes_integration.rs
