[package]
name = "neko_oidc"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.43"
tokio = {version = "1.49.0", features = ["full"]}
sqlx = {version = "0.8.6", features = [ "runtime-tokio", "postgres", "chrono", "uuid" ]}
jsonwebtoken = "10.3.0"
uuid = {version = "1.20.0", features = [ "v4", "serde" ]}
rand = "0.10.0"

